<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="415dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/defaultPadding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/smallPadding"
                android:text="@string/categoriesText"
                android:textSize="@dimen/defaultTextSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/lengthButton"
                    style="@style/AppTheme.button"
                    android:text="@string/lengthButtonText"
                    tools:ignore="ButtonStyle,UnusedAttribute" />


                <Button
                    android:id="@+id/massButton"
                    style="@style/AppTheme.button"
                    android:text="@string/massButtonText"
                    tools:ignore="ButtonStyle,UnusedAttribute" />

                <Button
                    android:id="@+id/areaButton"
                    style="@style/AppTheme.button"
                    android:text="@string/areaButtonText"
                    tools:ignore="ButtonStyle,UnusedAttribute" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/volumeButton"
                    style="@style/AppTheme.button"
                    android:text="@string/volumeButtonText"
                    tools:ignore="ButtonStyle,UnusedAttribute" />


                <Button
                    android:id="@+id/temperatureButton"
                    style="@style/AppTheme.button"
                    android:text="@string/temperatureButtonText"
                    tools:ignore="ButtonStyle,UnusedAttribute" />

                <Button
                    android:id="@+id/frequenzyButton"
                    style="@style/AppTheme.button"
                    android:text="@string/frequenzyButtonText"
                    tools:ignore="ButtonStyle,UnusedAttribute" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="256dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="@dimen/smallPadding"
                    android:text="@string/quickSelect"
                    android:textSize="@dimen/defaultTextSize" />

                <Button
                    android:id="@+id/usuk"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:text="@string/ukText"
                    android:textColor="@color/white"
                    android:textSize="@dimen/smallTextSize"
                    tools:ignore="ButtonStyle,UnusedAttribute" />

            </LinearLayout>


            <Button
                android:id="@+id/quickButton1"
                style="@style/AppTheme.button2"
                android:text="@string/frequenzyButtonText"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:id="@+id/quickButton2"
                style="@style/AppTheme.button2"
                android:text="@string/frequenzyButtonText"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:id="@+id/quickButton3"
                style="@style/AppTheme.button2"
                android:text="@string/frequenzyButtonText"
                tools:ignore="ButtonStyle,UnusedAttribute" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
